# majel

./: .gitignore  CMakeLists.txt  README.md  allocation.cc  allocation.h  allocation_test.cc  array.h  array_test.cc  cuda_device.cc  cuda_device.h  darray.cc  darray.h  darray_test.cc  ddim.cc  ddim.h  ddim_test.cc  dim.h  dim_test.cu  float16.h  malloc.cc  place.cc  place_test.cc  reference.h
cmake/: generic.cmake
